--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 # See https://www.dartlang.org/guides/libraries/private-files
 
 # Files and directories created by pub
+build/
+ios/
+android/
+test/
+
 .dart_tool/
 .packages
 # If you're building an application, you may want to check-in your pubspec.lock
